chore: fix paths

--- a/attractions/star-rating/star-rating.scss
+++ b/attractions/star-rating/star-rating.scss
@@ -1,5 +1,5 @@
 @use 'sass:color';
-@use 'node_modules/attractions/_variables' as vars;
+@use '../_variables' as vars;
 @use '../_mixins';
 
 $hover-color: color.mix(#fff, vars.$main, 60%);
