--- a/attractions/button/button.scss
+++ b/attractions/button/button.scss
@@ -1,6 +1,6 @@
 @use 'sass:color';
 @use 'sass:math';
-@use 'node_modules/attractions/_variables' as vars;
+@use '../_variables' as vars;
 @use './_mixins';
 @use '../_appearances';
 
