--- a/attractions/card/card.scss
+++ b/attractions/card/card.scss
@@ -1,5 +1,5 @@
 @use 'sass:color';
-@use 'node_modules/attractions/_variables' as vars;
+@use '../_variables' as vars;
 
 .card {
   background-color: vars.$background;
