--- a/attractions/date-picker/calendar.scss
+++ b/attractions/date-picker/calendar.scss
@@ -1,6 +1,6 @@
 @use 'sass:color';
 @use 'sass:math';
-@use 'node_modules/attractions/_variables' as vars;
+@use '../_variables' as vars;
 
 $day-size: 2.25rem;
 $day-gap: 0.0625rem;
