--- a/attractions/modal/modal-overlay.scss
+++ b/attractions/modal/modal-overlay.scss
@@ -1,4 +1,4 @@
-@use 'node_modules/attractions/_variables' as vars;
+@use '../_variables' as vars;
 
 .modal-overlay {
   background-color: vars.$modal-overlay-bg;
