--- a/attractions/table/table.scss
+++ b/attractions/table/table.scss
@@ -1,5 +1,5 @@
 @use 'sass:color';
-@use 'node_modules/attractions/_variables' as vars;
+@use '../_variables' as vars;
 
 table {
   border-collapse: separate;
