chore: fix paths

--- a/attractions/_variables.scss
+++ b/attractions/_variables.scss
@@ -3,7 +3,7 @@
 $font: "Ubuntu", sans-serif !default;
 
 $main: #4300b0 !default;
-$background: #fff !default;
+$background: #222 !default;
 $main-text: #fff !default;
 $danger: #b80000 !default;
 $dark: #333 !default;
