--- a/attractions/_variables.scss
+++ b/attractions/_variables.scss
@@ -1,9 +1,9 @@
 @use "sass:color";
 
-$font: "Ubuntu", sans-serif !default;
+$font: "Ubuntu", Helvetica, Arial, sans-serif !default;
 
-$main: #4300b0 !default;
-$background: #222 !default;
+$main: #4ab9a9 !default;
+$background: #121212 !default;
 $main-text: #fff !default;
 $danger: #b80000 !default;
 $dark: #333 !default;
@@ -55,13 +55,13 @@ $regular-font-weight: 400 !default;
 $thin-font-weight: 300 !default;
 $button-font-weight: $bold-font-weight !default;
 
-$shadow-0: 0 2px 2px 0 color.adjust(#000, $alpha: -0.86),
-  0 1px 5px 0 color.adjust(#000, $alpha: -0.88) !default;
+$shadow-0: 0 2px 2px 0 color.adjust(#000, $alpha: 0.86),
+  0 1px 5px 0 color.adjust(#000, $alpha: 0.88) !default;
 
-$shadow-1: 0 2px 5px color.adjust(#000, $alpha: -0.86), 0 1px 5px color.adjust(#000, $alpha: -0.88) !default;
+$shadow-1: 0 2px 5px color.adjust(#000, $alpha: 0.86), 0 1px 5px color.adjust(#000, $alpha: 0.88) !default;
 
-$shadow-raised: 0 2px 4px -1px color.adjust(#000, $alpha: -0.8),
-  0 3px 5px 0 color.adjust(#000, $alpha: -0.86), 0 1px 10px 0 color.adjust(#000, $alpha: -0.88) !default;
+$shadow-raised: 0 2px 4px -1px color.adjust(#000, $alpha: 0.8),
+  0 3px 5px 0 color.adjust(#000, $alpha: 0.86), 0 1px 10px 0 color.adjust(#000, $alpha: 0.88) !default;
 
 // X icon from Feather icons: https://feathericons.com/?query=x
 $x-icon: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-x'%3E%3Cline x1='18' y1='6' x2='6' y2='18'%3E%3C/line%3E%3Cline x1='6' y1='6' x2='18' y2='18'%3E%3C/line%3E%3C/svg%3E" !default;
