--- a/docs/static/css/global.scss
+++ b/docs/static/css/global.scss
@@ -1,4 +1,4 @@
-@use "attractions-theme" as vars;
+@use "./attractions-theme" as vars;
 
 :global {
   html {
@@ -7,6 +7,8 @@
     @media (prefers-reduced-motion: reduce) {
       scroll-behavior: auto;
     }
+
+    background: vars.$background;
   }
 
   * {
