--- a/docs/static/css/routes/docs/_layout.scss
+++ b/docs/static/css/routes/docs/_layout.scss
@@ -1,5 +1,5 @@
-@use "attractions-theme" as vars;
-@use "global";
+@use "../../attractions-theme" as vars;
+@use "../../global";
 
 main {
   display: flex;
