--- a/docs/static/css/routes/docs/components/text-field.scss
+++ b/docs/static/css/routes/docs/components/text-field.scss
@@ -1,4 +1,4 @@
-@use "attractions-theme" as vars;
+@use "../../../attractions-theme" as vars;
 
 [slot="showcase"] :global {
   .text-field.outline {
