--- a/docs/static/css/containers/docs/desktop-navigation.scss
+++ b/docs/static/css/containers/docs/desktop-navigation.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 @use "../../attractions-theme" as vars;
 
-nav {
+nav.left {
   display: none;
 
   @media only screen and (min-width: 1024px) {
@@ -28,6 +28,38 @@ nav {
         flex-direction: column;
         margin: 0.5em 0 0.5em 1em;
         padding-left: 0.5em;
+      }
+    }
+  }
+}
+
+nav.right {
+  display: none;
+
+  @media only screen and (min-width: 1024px) {
+    border-left: 1px solid color.adjust(vars.$main, $alpha: -0.75);
+    display: block;
+    margin-left: 3em;
+    min-width: 13em;
+    padding: 0.5em 0 0.5em 0.5em;
+
+    :global .btn {
+      margin-bottom: 0.25em;
+      white-space: nowrap;
+    }
+
+    :global .accordion {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+
+      section {
+        align-items: flex-start;
+        border-right: 1px solid vars.$light-contrast;
+        display: flex;
+        flex-direction: column;
+        margin: 0.5em 1em 0.5em 0;
+        padding-right: 0.5em;
       }
     }
   }
