--- a/attractions/_variables.scss
+++ b/attractions/_variables.scss
@@ -58,7 +58,8 @@ $button-font-weight: $bold-font-weight !default;
 $shadow-0: 0 2px 2px 0 color.adjust(#242424, $alpha: 0.86),
   0 1px 5px 0 color.adjust(#242424, $alpha: 0.88) !default;
 
-$shadow-1: 0 2px 5px color.adjust(#242424, $alpha: 0.86), 0 1px 5px color.adjust(#242424, $alpha: 0.88) !default;
+$shadow-1: 0 2px 5px color.adjust(#242424, $alpha: 0.86),
+  0 1px 5px color.adjust(#242424, $alpha: 0.88) !default;
 
 $shadow-raised: 0 2px 4px -1px color.adjust(#242424, $alpha: 0.8),
   0 3px 5px 0 color.adjust(#242424, $alpha: 0.86), 0 1px 10px 0 color.adjust(#242424, $alpha: 0.88) !default;
